link was broke in word2vec html, fixed it

--- a/word2vec-in-6-lines.html
+++ b/word2vec-in-6-lines.html
@@ -11780,8 +11780,8 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Word2Vec-in-6-lines-of-Python">Word2Vec in 6 lines of Python<a class="anchor-link" href="#Word2Vec-in-6-lines-of-Python">&#194;&#182;</a></h1><ul>
 <li>6 lines, not including the analysis</li>
-<li>Using <a href="&#39;http://www.gutenberg.org/wiki/Main_Page&#39;">project gutenberg</a> to obtain data. </li>
-<li><a href="&#39;http://www.gutenberg.org/ebooks/1041&#39;">Input data used in this walkthrough</a></li>
+<li>Using <a href="http://www.gutenberg.org/wiki/Main_Page">project gutenberg</a> to obtain data. </li>
+<li><a href="http://www.gutenberg.org/ebooks/1041">Input data used in this walkthrough</a></li>
 </ul>
 
 <pre><code>1  import requests
