--- a/canvas_stuff/exp.html
+++ b/canvas_stuff/exp.html
@@ -5,10 +5,9 @@
     <title>Canvas Lab</title>
     <style type="text/css">
         body, h1 {
-            color: blue;
-            font-size: 30px;
             text-align: center;
-            background: #00B7C2;
+            /* background: #128494; */
+            background: #111F4D;
         }
         canvas {
             /*border: 1px solid black;*/
