--- a/canvas_stuff/exp.html
+++ b/canvas_stuff/exp.html
@@ -7,7 +7,7 @@
         body, h1 {
             text-align: center;
             /* background: #128494; */
-            background: #111F4D;
+            background: #111F4D; /* #161921 #111F4D #212125 #1F2D3D*/
         }
         canvas {
             /*border: 1px solid black;*/
@@ -21,5 +21,7 @@
     <audio controls>
         <source src="mitis.mp3" id="myAudio" type="audio/mp3">
     </audio>
+    <!-- <input type="text" maxlength="3" name="switch" id="switch"/>
+    <input type="button" value="Change" onclick="change_palette()"/> -->
 </body>
 </html>
