--- a/canvas_stuff/expthree.html
+++ b/canvas_stuff/expthree.html
@@ -17,8 +17,8 @@
 <body>
     <canvas></canvas>
     <script src="expthree.js"></script>
-    <audio controls>
+    <!-- <audio controls>
         <source src="" id="myAudio" type="audio/mp3">
-    </audio>
+    </audio> -->
 </body>
 </html>
