push from home, added fix files.. i hope

--- a/canvas_stuff/exptwo.html
+++ b/canvas_stuff/exptwo.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="expone.js"></script>
+    <script src="./expone.js"></script>
     <audio controls>
         <source src="mitis.mp3" id="myAudio" type="audio/mp3">
     </audio>
