--- a/canvas_stuff/exp.html
+++ b/canvas_stuff/exp.html
@@ -18,9 +18,9 @@
 <body>
     <canvas></canvas>
     <script src="canvasexp.js"></script>
-    <audio controls>
+    <!-- <audio controls>
         <source src="mitis.mp3" id="myAudio" type="audio/mp3">
-    </audio>
+    </audio> -->
     <!-- <input type="text" maxlength="3" name="switch" id="switch"/>
     <input type="button" value="Change" onclick="change_palette()"/> -->
 </body>
