--- a/canvas_stuff/exptwo.html
+++ b/canvas_stuff/exptwo.html
@@ -17,10 +17,9 @@
 <body>
     <canvas></canvas>
     <script src="./expone.js"></script>
-    <audio controls>
+    <!-- <audio controls>
         <source src="mitis.mp3" id="myAudio" type="audio/mp3">
-    </audio>
-    <br>
+    </audio> -->
     <input type="button" onclick="clickAlert()" value="Menu">
     <!-- <input type="text" maxlength="3" name="switch" id="switch"/>
     <input type="button" value="Change" onclick="change_palette()"/> -->
