updated third experiment with song

--- a/canvas_stuff/expthree.html
+++ b/canvas_stuff/expthree.html
@@ -17,8 +17,8 @@
 <body>
     <canvas></canvas>
     <script src="expthree.js"></script>
-    <!-- <audio controls>
-        <source src="" id="myAudio" type="audio/mp3">
-    </audio> -->
+    <audio controls>
+        <source src="/Users/simonkeng/Desktop/02 - Ethereality (Original Mix).mp3" id="myAudio" type="audio/mp3">
+    </audio>
 </body>
 </html>
