--- a/canvas_stuff/expthree.html
+++ b/canvas_stuff/expthree.html
@@ -18,7 +18,7 @@
     <canvas></canvas>
     <script src="expthree.js"></script>
     <audio controls>
-        <source src="/Users/simonkeng/Desktop/Ethereality.mp3" id="myAudio" type="audio/mp3">
+        <source src="Ethereality.mp3" id="myAudio" type="audio/mp3">
     </audio>
 </body>
 </html>
