updates, fixes, new content

--- a/canvas_stuff/exptwo.html
+++ b/canvas_stuff/exptwo.html
@@ -20,7 +20,13 @@
     <!-- <audio controls>
         <source src="mitis.mp3" id="myAudio" type="audio/mp3">
     </audio> -->
-    <input type="button" onclick="clickAlert()" value="Menu">
+    <!-- <input type="button" onclick="clickAlert()" value="Menu"> -->
+        <!-- <form id="fml">
+            Setting: <input type="text" value="34"/>
+        </form> -->
+    <!-- <input type="text" id="fml"/>
+    <button onclick="flipSwitch()">This Will Change EVERYTHING</button>
+    <p id="tots"></p> -->
     <!-- <input type="text" maxlength="3" name="switch" id="switch"/>
     <input type="button" value="Change" onclick="change_palette()"/> -->
 </body>
