added vim stuff and removed download ability in audio tag

--- a/canvas_stuff/expthree.html
+++ b/canvas_stuff/expthree.html
@@ -17,7 +17,7 @@
 <body>
     <canvas></canvas>
     <script src="expthree.js"></script>
-    <audio controls>
+    <audio controls controlsList="nodownload">
         <source src="Ethereality.mp3" id="myAudio" type="audio/mp3">
     </audio>
 </body>
