updated canvas experiments to show issa

--- a/canvas_stuff/exp.html
+++ b/canvas_stuff/exp.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="canvasexp.js"></script>
+    <script src="exp.js"></script>
     <!-- <audio controls>
         <source src="mitis.mp3" id="myAudio" type="audio/mp3">
     </audio> -->
