--- a/canvas_stuff/s_demo.html
+++ b/canvas_stuff/s_demo.html
@@ -66,7 +66,7 @@ function loaded() {
 
 function setup() {
     createCanvas(1500, 600);
-    song = loadSound("music/getter.mp3", loaded);
+    song = loadSound("getter.mp3", loaded);
     amp = new p5.Amplitude();
 
 }
