small edits to s_demo added my name and affiliation

--- a/canvas_stuff/s_demo.html
+++ b/canvas_stuff/s_demo.html
@@ -15,17 +15,40 @@
         h1 {
             color: #12e6c8;
             font-family: 'Metal Mania', cursive;
-            font-size: 60;
+            font-size: 50;
             text-align: center;
             margin-top: 5px;
             margin-bottom: 5px;
         }
+        p {
+            color: #12e6c8;
+            font-family: 'Metal Mania', cursive;
+            font-size: 30;
+            text-align: center;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        a {
+            color: #a287f4;
+            text-decoration: none;
+            margin: 10px;
+        }
+        a:hover {
+            color: #FFFFFF;
+            text-decoration: none;
+        }
     </style>
 
     <h1>
-        Audiomou5e
+        s i m o n k e n g
     </h1>
-       
+    <p>
+        <a href="https://www.github.com/simonkeng">github</a>
+        <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
+        <a href="https:www.twitter.com/simon_keng">twitter</a>
+    </p>
+
+     
 </html>
 
 <script>
