added license, updated github linkedin and twitter urls

--- a/canvas_stuff/s_demo.html
+++ b/canvas_stuff/s_demo.html
@@ -15,7 +15,7 @@
         h1 {
             color: #12e6c8;
             font-family: 'Metal Mania', cursive;
-            font-size: 50;
+            font-size: 60;
             text-align: center;
             margin-top: 5px;
             margin-bottom: 5px;
@@ -37,10 +37,17 @@
             color: #FFFFFF;
             text-decoration: none;
         }
+        #bottom {
+            font-size: 16px;
+            font-family: 'Courier New', Courier, monospace;
+            position: absolute;
+            bottom: 5px;
+            text-align: center;
+        }
     </style>
 
     <h1>
-        s i m o n k e n g
+        Audiomou5e
     </h1>
     <p>
         <a href="https://www.github.com/simonkeng">github</a>
@@ -48,6 +55,9 @@
         <a href="https:www.twitter.com/simon_keng">twitter</a>
     </p>
 
+    <p id="bottom">
+        BSD-3 Copyright (c) 2018, Simon Keng
+    </p>
      
 </html>
 
