think this is the last commit for s_demo

--- a/canvas_stuff/s_demo.html
+++ b/canvas_stuff/s_demo.html
@@ -52,7 +52,7 @@
     <p>
         <a href="https://www.github.com/simonkeng">github</a>
         <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
-        <a href="https:www.twitter.com/simon_keng">twitter</a>
+        <a href="https://www.twitter.com/simon_keng">twitter</a>
     </p>
 
     <p id="bottom">
