added a few more examples

--- a/canvas_stuff/s_demo.html
+++ b/canvas_stuff/s_demo.html
@@ -44,6 +44,11 @@
             bottom: 5px;
             text-align: center;
         }
+        .demo {
+            color: #414141;
+            
+        }
+
     </style>
 
     <h1>
@@ -53,6 +58,9 @@
         <a href="https://www.github.com/simonkeng">github</a>
         <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
         <a href="https://www.twitter.com/simon_keng">twitter</a>
+        <br>
+        <a href="s_rex_demo.html" class="demo">rex</a>
+        <a href="mouse_zero_demo.html" class="demo">mau5</a>
     </p>
 
     <p id="bottom">
