edits to format and layout

--- a/canvas_stuff/s_rex_demo.html
+++ b/canvas_stuff/s_rex_demo.html
@@ -44,10 +44,9 @@
             bottom: 5px;
             text-align: center;
         }
-        #demo {
+        .demo {
             color: #414141;
-            bottom: 10px;
-            position: absolute;
+            
         }
     </style>
 
@@ -58,7 +57,9 @@
         <a href="https://www.github.com/simonkeng">github</a>
         <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
         <a href="https://www.twitter.com/simon_keng">twitter</a>
-        <a href="s_rex_demo.html" id="demo">rex</a>
+        <br>
+        <a href="s_rex_demo.html" class="demo">rex</a>
+        <a href="mouse_zero_demo.html" class="demo">mau5</a>
     </p>
 
     <p id="bottom">
