--- a/canvas_stuff/mouse_zero_demo.html
+++ b/canvas_stuff/mouse_zero_demo.html
@@ -2,13 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/gif" href="media/pika.gif" />
         <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="layout.js"></script>
     </head>
 
     <style>
@@ -24,16 +21,47 @@
             margin-top: 5px;
             margin-bottom: 5px;
         }
+        p {
+            color: #12e6c8;
+            font-family: 'Metal Mania', cursive;
+            font-size: 30;
+            text-align: center;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        a {
+            color: #a287f4;
+            text-decoration: none;
+            margin: 10px;
+        }
+        a:hover {
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+        #bottom {
+            font-size: 16px;
+            font-family: 'Courier New', Courier, monospace;
+            position: absolute;
+            bottom: 5px;
+            text-align: center;
+        }
+        .demo {
+            color: #414141;
+            
+        }
     </style>
 
     <h1>
         Audiomou5e
     </h1>
-
-    <div id="demo-browser">
-
-    </div>
-       
+    <p>
+        <a href="https://www.github.com/simonkeng">github</a>
+        <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
+        <a href="https://www.twitter.com/simon_keng">twitter</a>
+        <br>
+        <a href="s_rex_demo.html" class="demo">rex</a>
+        <a href="mouse_zero_demo.html" class="demo">mau5</a>
+    </p>       
 
 </html>
 
