final push for testing live

--- a/canvas_stuff/s_demo.html
+++ b/canvas_stuff/s_demo.html
@@ -46,6 +46,7 @@
         }
         .demo {
             color: #414141;
+            font-size: 30px;
             
         }
 
@@ -59,12 +60,13 @@
         <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
         <a href="https://www.twitter.com/simon_keng">twitter</a>
         <br>
-        <a href="s_rex_demo.html" class="demo">rex</a>
-        <a href="mouse_zero_demo.html" class="demo">mau5</a>
+        <a href="s_demo.html" class="demo">s</a>
+        <a href="mouse_rex_demo.html" class="demo">mau5</a>
+        <a href="kp_demo.html" class="demo">kp</a>
     </p>
 
     <p id="bottom">
-        BSD-3 Copyright (c) 2018, Simon Keng
+        BSD-3 Copyright (c) 2018, Simon Keng. All rights reserved.
     </p>
      
 </html>
