--- a/canvas_stuff/s_rex_demo.html
+++ b/canvas_stuff/s_rex_demo.html
@@ -58,8 +58,8 @@
         <a href="https://www.linkedin.com/in/simonkeng">linkedin</a>
         <a href="https://www.twitter.com/simon_keng">twitter</a>
         <br>
-        <a href="s_rex_demo.html" class="demo">rex</a>
-        <a href="mouse_zero_demo.html" class="demo">mau5</a>
+        <a href="kp_demo.html" class="demo">kp</a>
+        <a href="mouse_rex_demo.html" class="demo">mau5</a>
     </p>
 
     <p id="bottom">
@@ -91,7 +91,7 @@ function togglePlaying() {
 }
 
 function jumpFunc() {
-    song.jump(110);
+    song.jump(35);
 
 }
 
@@ -142,10 +142,10 @@ function draw() {
 
             // ======== The S
             noStroke();
-            fill('#a287f4');
+            fill('#12e6c8');
             ellipse((width / 2) + h + diam_large, (height / 2) + h + 60, diam_large, diam_large);
 
-            fill('#12e6c8');
+            fill('#a287f4');
             ellipse((width / 2) - h - diam_large, (height / 2) - h - 60, diam_large, diam_large);
             // ========
 
